# moto-pos

./: package-lock.json  package.json
.github/workflows/: build-windows.yml
server-remoto/: Cargo.toml  Dockerfile  railway.toml
server-remoto/migrations/: 008_permisos_recepcion.sql
server-remoto/src/: auth.rs  rpc.rs  sync.rs
server-remoto/static/: index.html
server-remoto/static/assets/: index-1F4_qtsZ.js  index-BEU0NZ7o.js  index-BGjrUbGI.js  index-BJVoE1CH.js  index-BQydE412.css  index-BXFAA46a.js  index-BptPL6GZ.js  index-BrcWFBSe.js  index-C1cXoZ17.css  index-C9YXdPRI.js  index-C_M58PFN.js  index-D2efe_M3.js  index-DDio240m.css  index-DFB1jcrf.css  index-DWGjIOI6.css  index-Db-Nji_P.js  index-Ddv1kOd-.js  index-DtBiqzJ2.js  index-dMqsMnq0.js  (+3 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  cortes.rs  mod.rs  print_termico.rs  productos.rs  recepcion.rs  reportes.rs  respaldos.rs  sync_remoto.rs  ventas.rs
src-tauri/src/db/: connection.rs  migrations.rs  schema.rs
src-tauri/src/sync/: outbox.rs  worker.rs
src/lib/: invokeCompat.ts
src/pages/: Ajustes.tsx  Bitacora.tsx  Catalogo.tsx  Clientes.tsx  ConexionMovil.tsx  CortesCaja.tsx  Dashboard.tsx  Etiquetas.tsx  HistorialVentas.tsx  Login.tsx  Pedidos.tsx  Presupuestos.tsx  PuntoDeVenta.tsx  Recepcion.tsx  Reportes.tsx  Sincronizacion.tsx  Usuarios.tsx
src/store/: authStore.ts  cortesStore.ts  historialStore.ts  productStore.ts  ventaStore.ts
src/utils/: print.ts  ticket.ts
