[package]
name = "pos"
version = "0.1.0"
description = "POS Moto Refaccionaria"
authors = ["Moto Refaccionaria"]
edition = "2021"

[lib]
name = "pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos SQLite
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Fechas y horas
chrono = { version = "0.4", features = ["serde"] }

# IDs únicos
uuid = { version = "1", features = ["v4"] }

# Seguridad / contraseñas
bcrypt = "0.15"

# Manejo de errores
thiserror = "1"
anyhow = "1"

# Async runtime (para worker de sync)
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Abrir archivos en el sistema
open = "5"

